frontend/test/typecheck/error/assign-array.fc
void foo(int[] p) {
    int[10] arr = 1;
    arr = p;
}
